[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-experiment-search"
version = "0.1.0"
description = "Search and browse Hydra experiment outputs from Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
]

[project.scripts]
hydra-experiment-search = "hydra_experiment_search.cli:main"
hydra-experiment-search-web = "hydra_experiment_search.web:main"

[tool.setuptools]
packages = ["hydra_experiment_search"]
